--- a/TomadaStore.CustomerApi/appsettings.json
+++ b/TomadaStore.CustomerApi/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "SqlServer": "Server=localhost;Database=TomadaStore.CustomerDB;User Id=sa;Password=SqlServer@2022;TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=localhost;Initial Catalog=TomadaStore.CustomerDB;Persist Security Info=True;User ID=sa;Password=SqlServer@2022;Trust Server Certificate=True"
+  }
 }
