--- a/TomadaStore.ProductApi/TomadaStore.ProductApi.csproj
+++ b/TomadaStore.ProductApi/TomadaStore.ProductApi.csproj
@@ -11,6 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TomadaStore.SalesApi\TomadaStore.SalesApi.csproj" />
+    <ProjectReference Include="..\TomadaStore\TomadaStore.Models.csproj" />
   </ItemGroup>
 
 </Project>
