--- a/TomadaStore.ProductApi/appsettings.json
+++ b/TomadaStore.ProductApi/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MongoDBProduct": "mongodb+srv://brunonlsctt_db_user:fE9AcimUkFWXIGGO@interacaomongo.mpghkok.mongodb.net/"
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://brunonlsctt_db_user:fE9AcimUkFWXIGGO@interacaomongo.mpghkok.mongodb.net/",
+    "DatabaseName": "TomadaStoreProductDB",
+    "CollectionName": "Products"
   }
 }
