--- a/TomadaStore.SalesApi/appsettings.json
+++ b/TomadaStore.SalesApi/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MongoDBSales": "mongodb+srv://brunonlsctt_db_user:QOTRQKMQOTRQKM@cluster0.bdsfkjm.mongodb.net/?appName=Cluster0"
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://brunonlsctt_db_user:QOTRQKMQOTRQKM@cluster0.bdsfkjm.mongodb.net/?appName=Cluster0",
+    "DatabaseName": "TomadaStoreSaleApi",
+    "CollectionName": "Sales"
   }
 }
