implement new connection and logger

--- a/TomadaStore.CategoryApi/TomadaStore.CategoryApi.csproj
+++ b/TomadaStore.CategoryApi/TomadaStore.CategoryApi.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>2cbccca7-09a8-4f86-9498-a1fa18cc6dbd</UserSecretsId>
+    <UserSecretsId>c97ade82-733d-4815-b08a-a78702fa0bb7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
@@ -14,8 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure.Data\Infrastructure.Data.csproj" />
-    <ProjectReference Include="..\TomadaStore\TomadaStore.Models.csproj" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
