--- a/TomadaStore.SalesApi/appsettings.json
+++ b/TomadaStore.SalesApi/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "MongoDB": {
-    "ConnectionURI": "mongodb+srv://brunonlsctt_db_user:QOTRQKMQOTRQKM@cluster0.bdsfkjm.mongodb.net/?appName=Cluster0",
-    "DatabaseName": "TomadaStoreSaleApi",
-    "CollectionName": "Sales"
-  }
+  "ConnectionStrings": {
+    "MongoDb": "mongodb+srv://brunosilva_db_user:MsdetVorTQiVASuO@tomadastoreapicluster.0dt0hkr.mongodb.net/"
+  },
+  "DatabaseName": "TomadaStoreApiCluster"
 }
