--- a/TomadaStore.CustomerApi/TomadaStore.CustomerApi.csproj
+++ b/TomadaStore.CustomerApi/TomadaStore.CustomerApi.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.Data\Infrastructure.Data.csproj" />
     <ProjectReference Include="..\TomadaStore\TomadaStore.Models.csproj" />
   </ItemGroup>
 
