--- a/TomadaStore.ProductApi/TomadaStore.ProductApi.csproj
+++ b/TomadaStore.ProductApi/TomadaStore.ProductApi.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.Data\Infrastructure.Data.csproj" />
     <ProjectReference Include="..\TomadaStore.SalesApi\TomadaStore.SalesApi.csproj" />
     <ProjectReference Include="..\TomadaStore\TomadaStore.Models.csproj" />
   </ItemGroup>
