--- a/TomadaStore.CategoryApi/TomadaStore.CategoryApi.csproj
+++ b/TomadaStore.CategoryApi/TomadaStore.CategoryApi.csproj
@@ -11,10 +11,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Npgsql" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.MongoDB" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
