--- a/TomadaStore.ProductApi/TomadaStore.ProductApi.csproj
+++ b/TomadaStore.ProductApi/TomadaStore.ProductApi.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.MongoDB" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
