feat: implement producer with rabbitMQ

--- a/TomadaStore.ProductConsumerApi/TomadaStore.ProductConsumerApi.csproj
+++ b/TomadaStore.ProductConsumerApi/TomadaStore.ProductConsumerApi.csproj
@@ -1,22 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>2cbccca7-09a8-4f86-9498-a1fa18cc6dbd</UserSecretsId>
+    <UserSecretsId>be90d107-65b3-4903-9b3b-6fd672bb8bd8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Infrastructure.Data\Infrastructure.Data.csproj" />
-    <ProjectReference Include="..\TomadaStore\TomadaStore.Models.csproj" />
   </ItemGroup>
 
 </Project>
