--- a/TomadaStore.ProductConsumerApi/appsettings.json
+++ b/TomadaStore.ProductConsumerApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDb": "mongodb+srv://brunosilva_db_user:MsdetVorTQiVASuO@tomadastoreapicluster.0dt0hkr.mongodb.net/"
+  },
+  "DatabaseName": "TomadaStoreApiCluster"
 }
